RESOLVED FIXED231249
Fix serialization of CSSMediaRule
https://bugs.webkit.org/show_bug.cgi?id=231249
Summary Fix serialization of CSSMediaRule
Aditya Keerthi
Reported 2021-10-05 13:45:20 PDT
https://drafts.csswg.org/cssom/#serialize-a-css-rule The following WPT is failing: css/cssom/serialize-media-rule.html
Attachments
Patch (4.72 KB, patch)
2021-10-05 13:54 PDT, Aditya Keerthi
no flags
Patch (10.06 KB, patch)
2021-10-05 16:41 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-10-05 13:54:07 PDT
Aditya Keerthi
Comment 2 2021-10-05 16:41:13 PDT
Chris Dumez
Comment 3 2021-10-06 10:51:20 PDT
Comment on attachment 440293 [details] Patch r=me
Aditya Keerthi
Comment 4 2021-10-06 11:07:14 PDT
Comment on attachment 440293 [details] Patch Thanks for the review!
EWS
Comment 5 2021-10-06 11:11:26 PDT
Committed r283637 (242588@main): <https://commits.webkit.org/242588@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440293 [details].
Radar WebKit Bug Importer
Comment 6 2021-10-06 11:15:42 PDT
Note You need to log in before you can comment on or make changes to this bug.