Fix serialization of CSSMediaRule https://bugs.webkit.org/show_bug.cgi?id=231249

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-ui/appearance-serialization-expected.txt: Rebaseline.
* web-platform-tests/css/css-ui/webkit-appearance-serialization-expected.txt: Rebaseline.
* web-platform-tests/css/cssom/serialize-media-rule-expected.txt: Mark progression.

Source/WebCore:

See https://drafts.csswg.org/cssom/#serialize-a-css-rule.

New behavior matches Chrome and Firefox.

* css/CSSMediaRule.cpp:
(WebCore::CSSMediaRule::cssText const):

Remove space before newline.

LayoutTests:

Rebaseline tests to account for the correct serialization.

* css3/supports-cssom-expected.txt:
* css3/supports-cssom.html:
* fast/css/resources/insertRule-media.js:


Canonical link: https://commits.webkit.org/242588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283637 268f45cc-cd09-0410-ab3c-d52691b4dbfc